syntax = "proto3";

package loadtest;

// LoadTestCoordinator — single gRPC service for all inter-node traffic.
//
// Used as the Raft transport (Issue #47), metrics streaming (Issue #49),
// test config distribution (Issue #76), and cluster health checks.
//
// All nodes listen on CLUSTER_BIND_ADDR (default 0.0.0.0:7000).
// TLS is optional — GCP internal VPC traffic is encrypted at the network layer.
service LoadTestCoordinator {
  // ── Raft transport (Issue #47) ──────────────────────────────────────────────
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(VoteRequest)           returns (VoteResponse);
  rpc InstallSnapshot(SnapshotRequest)   returns (SnapshotResponse);

  // ── Test coordination (Issues #48 / #76) ────────────────────────────────────
  rpc DistributeConfig(TestConfig)   returns (Ack);
  rpc StartTest(StartRequest)        returns (Ack);
  rpc StopTest(StopRequest)          returns (Ack);

  // ── Metrics streaming — client-side stream (Issue #49) ──────────────────────
  // Each worker node streams MetricsBatch messages to the leader.
  rpc StreamMetrics(stream MetricsBatch) returns (Ack);

  // ── Cluster health ───────────────────────────────────────────────────────────
  rpc HealthCheck(HealthRequest) returns (HealthResponse);
}

// ── Raft messages ──────────────────────────────────────────────────────────────

message LogEntry {
  uint64 index = 1;
  uint64 term  = 2;
  bytes  data  = 3;
}

message AppendEntriesRequest {
  uint64            term           = 1;
  string            leader_id      = 2;
  uint64            prev_log_index = 3;
  uint64            prev_log_term  = 4;
  repeated LogEntry entries        = 5;
  uint64            leader_commit  = 6;
}

message AppendEntriesResponse {
  uint64 term           = 1;
  bool   success        = 2;
  uint64 conflict_index = 3; // log-repair hint for the leader
}

message VoteRequest {
  uint64 term           = 1;
  string candidate_id   = 2;
  uint64 last_log_index = 3;
  uint64 last_log_term  = 4;
}

message VoteResponse {
  uint64 term        = 1;
  bool   vote_granted = 2;
}

message SnapshotRequest {
  uint64 term                = 1;
  string leader_id           = 2;
  uint64 last_included_index = 3;
  uint64 last_included_term  = 4;
  bytes  data                = 5;
}

message SnapshotResponse {
  uint64 term = 1;
}

// ── Coordination messages ──────────────────────────────────────────────────────

message TestConfig {
  string yaml_content     = 1; // full YAML test config
  string config_version   = 2; // e.g. "sha256:abc123" for idempotency
  int64  start_at_unix_ms = 3; // coordinated start time (Issue #48)
}

message StartRequest {
  string test_id          = 1;
  int64  start_at_unix_ms = 2; // epoch ms; 0 = start immediately
}

message StopRequest {
  string test_id = 1;
  string reason  = 2;
}

message Ack {
  bool   ok      = 1;
  string message = 2;
}

// ── Metrics streaming ──────────────────────────────────────────────────────────

// A batch of metric samples emitted by one worker node.
// Streamed from each worker to the leader (Issue #49).
message MetricsBatch {
  string                   node_id           = 1;
  string                   region            = 2;
  int64                    timestamp_unix_ms = 3;
  repeated MetricPoint     points            = 4;
  repeated HistogramBucket histogram_buckets = 5;
}

message MetricPoint {
  string              name   = 1;
  double              value  = 2;
  map<string, string> labels = 3;
}

message HistogramBucket {
  string              metric_name = 1;
  double              le          = 2; // upper bound ("le" Prometheus label)
  uint64              count       = 3;
  map<string, string> labels      = 4;
}

// ── Health ─────────────────────────────────────────────────────────────────────

message HealthRequest {
  string node_id = 1;
}

message HealthResponse {
  string node_id       = 1;
  string state         = 2; // "standalone" | "forming" | "follower" | "leader"
  string region        = 3;
  bool   cluster_ready = 4;
  uint32 peer_count    = 5;
}
